# Dev_USBDevice

./: CMakeLists.txt  CMakeSettings_beagle.json  CMakeSettings_linux.json  CMakeSettings_win.json  MyBeagleToolchain.cmake  MyGlobalImports.cmake  MyPostBuild.cmake  MySpecial.cmake  README.md
CommonLib/: procoSerialSettings.cpp  procoSerialSettings.h  somePeriodicParms.cpp  somePeriodicParms.h  someUSBDeviceParms.cpp  someUSBDeviceParms.h
Test/: CMakeLists.txt  MainInit.cpp
cdhdemulator/: CMakeLists.txt  CmdLineExec.cpp  CmdLineExec.h  Main.cpp  MainInit.cpp  someCmdExec.cpp  someCmdExec.h  someEmulatorParms.cpp  someEmulatorParms.h  someEmulatorThread.cpp  someEmulatorThread.h
serialslave/: CMakeLists.txt  CmdLineExec.cpp  MainInit.cpp  SlaveThread.cpp  SlaveThread.h
sgslave/: CMakeLists.txt  CmdLineExec.cpp  CmdLineExec.h  Main.cpp  MainInit.cpp  SlaveThread.cpp  SlaveThread.h  sgCmdExec.cpp  sgCmdExec.h  sgMessage.cpp  sgMessage.h
usbslave/: CMakeLists.txt  CmdLineExec.cpp  CmdLineExec.h  Main.cpp  MainInit.cpp  SlaveThread.cpp  SlaveThread.h
